sdk-docs_versioned_docs/version-23.0.x/modules/Types/Types.md
---
id: 'Types'
title: 'Module: Types'
sidebar_label: 'Types'
---

## Enumerations

- [AssetHoldersOrderBy](../../enums/Types/AssetHoldersOrderBy/AssetHoldersOrderBy.md)
- [AuthTypeEnum](../../enums/Types/AuthTypeEnum/AuthTypeEnum.md)
- [AuthorizationStatusEnum](../../enums/Types/AuthorizationStatusEnum/AuthorizationStatusEnum.md)
- [AuthorizationType](../../enums/Types/AuthorizationType/AuthorizationType.md)
- [BalanceTypeEnum](../../enums/Types/BalanceTypeEnum/BalanceTypeEnum.md)
- [CallIdEnum](../../enums/Types/CallIdEnum/CallIdEnum.md)
- [ClaimScopeTypeEnum](../../enums/Types/ClaimScopeTypeEnum/ClaimScopeTypeEnum.md)
- [ClaimType](../../enums/Types/ClaimType/ClaimType.md)
- [ConditionTarget](../../enums/Types/ConditionTarget/ConditionTarget.md)
- [ConditionType](../../enums/Types/ConditionType/ConditionType.md)
- [ErrorCode](../../enums/Types/ErrorCode/ErrorCode.md)
- [EventIdEnum](../../enums/Types/EventIdEnum/EventIdEnum.md)
- [ExtrinsicsOrderBy](../../enums/Types/ExtrinsicsOrderBy/ExtrinsicsOrderBy.md)
- [InstructionStatusEnum](../../enums/Types/InstructionStatusEnum/InstructionStatusEnum.md)
- [KnownAssetType](../../enums/Types/KnownAssetType/KnownAssetType.md)
- [KnownNftType](../../enums/Types/KnownNftType/KnownNftType.md)
- [ModuleIdEnum](../../enums/Types/ModuleIdEnum/ModuleIdEnum.md)
- [MultiSigProposalVoteActionEnum](../../enums/Types/MultiSigProposalVoteActionEnum/MultiSigProposalVoteActionEnum.md)
- [NftHoldersOrderBy](../../enums/Types/NftHoldersOrderBy/NftHoldersOrderBy.md)
- [PayingAccountType](../../enums/Types/PayingAccountType/PayingAccountType.md)
- [PermissionGroupType](../../enums/Types/PermissionGroupType/PermissionGroupType.md)
- [PermissionType](../../enums/Types/PermissionType/PermissionType.md)
- [RoleType](../../enums/Types/RoleType/RoleType.md)
- [ScopeType](../../enums/Types/ScopeType/ScopeType.md)
- [SecurityIdentifierType](../../enums/Types/SecurityIdentifierType/SecurityIdentifierType.md)
- [SettlementDirectionEnum](../../enums/Types/SettlementDirectionEnum/SettlementDirectionEnum.md)
- [SettlementResultEnum](../../enums/Types/SettlementResultEnum/SettlementResultEnum.md)
- [SignerType](../../enums/Types/SignerType/SignerType.md)
- [StatType](../../enums/Types/StatType/StatType.md)
- [TransactionArgumentType](../../enums/Types/TransactionArgumentType/TransactionArgumentType.md)
- [TransactionStatus](../../enums/Types/TransactionStatus/TransactionStatus.md)
- [TransferError](../../enums/Types/TransferError/TransferError.md)
- [TransferRestrictionType](../../enums/Types/TransferRestrictionType/TransferRestrictionType.md)
- [TransferStatus](../../enums/Types/TransferStatus/TransferStatus.md)
- [TxGroup](../../enums/Types/TxGroup/TxGroup.md)

## Interfaces

- [AccreditedClaim](../../interfaces/Types/AccreditedClaim/AccreditedClaim.md)
- [ActiveTransferRestrictions](../../interfaces/Types/ActiveTransferRestrictions/ActiveTransferRestrictions.md)
- [AddCountStatInput](../../interfaces/Types/AddCountStatInput/AddCountStatInput.md)
- [AffiliateClaim](../../interfaces/Types/AffiliateClaim/AffiliateClaim.md)
- [ArrayTransactionArgument](../../interfaces/Types/ArrayTransactionArgument/ArrayTransactionArgument.md)
- [AssetDocument](../../interfaces/Types/AssetDocument/AssetDocument.md)
- [AssetWithGroup](../../interfaces/Types/AssetWithGroup/AssetWithGroup.md)
- [Balance](../../interfaces/Types/Balance/Balance.md)
- [BlockedClaim](../../interfaces/Types/BlockedClaim/BlockedClaim.md)
- [BuyLockupClaim](../../interfaces/Types/BuyLockupClaim/BuyLockupClaim.md)
- [CddClaim](../../interfaces/Types/CddClaim/CddClaim.md)
- [CddProviderRole](../../interfaces/Types/CddProviderRole/CddProviderRole.md)
- [CheckPermissionsResult](../../interfaces/Types/CheckPermissionsResult/CheckPermissionsResult.md)
- [CheckRolesResult](../../interfaces/Types/CheckRolesResult/CheckRolesResult.md)
- [CheckpointWithData](../../interfaces/Types/CheckpointWithData/CheckpointWithData.md)
- [ClaimCountRestrictionValue](../../interfaces/Types/ClaimCountRestrictionValue/ClaimCountRestrictionValue.md)
- [ClaimCountTransferRestriction](../../interfaces/Types/ClaimCountTransferRestriction/ClaimCountTransferRestriction.md)
- [ClaimData](../../interfaces/Types/ClaimData/ClaimData.md)
- [ClaimPercentageRestrictionValue](../../interfaces/Types/ClaimPercentageRestrictionValue/ClaimPercentageRestrictionValue.md)
- [ClaimPercentageTransferRestriction](../../interfaces/Types/ClaimPercentageTransferRestriction/ClaimPercentageTransferRestriction.md)
- [ClaimScope](../../interfaces/Types/ClaimScope/ClaimScope.md)
- [ClaimTarget](../../interfaces/Types/ClaimTarget/ClaimTarget.md)
- [ComplexTransactionArgument](../../interfaces/Types/ComplexTransactionArgument/ComplexTransactionArgument.md)
- [Compliance](../../interfaces/Types/Compliance/Compliance.md)
- [ComplianceRequirements](../../interfaces/Types/ComplianceRequirements/ComplianceRequirements.md)
- [ConditionBase](../../interfaces/Types/ConditionBase/ConditionBase.md)
- [ConditionCompliance](../../interfaces/Types/ConditionCompliance/ConditionCompliance.md)
- [CountTransferRestriction](../../interfaces/Types/CountTransferRestriction/CountTransferRestriction.md)
- [CreateTransactionBatchProcedureMethod](../../interfaces/Types/CreateTransactionBatchProcedureMethod/CreateTransactionBatchProcedureMethod.md)
- [CustomClaim](../../interfaces/Types/CustomClaim/CustomClaim.md)
- [DistributionPayment](../../interfaces/Types/DistributionPayment/DistributionPayment.md)
- [DistributionWithDetails](../../interfaces/Types/DistributionWithDetails/DistributionWithDetails.md)
- [EventIdentifier](../../interfaces/Types/EventIdentifier/EventIdentifier.md)
- [ExemptedClaim](../../interfaces/Types/ExemptedClaim/ExemptedClaim.md)
- [ExternalAgentCondition](../../interfaces/Types/ExternalAgentCondition/ExternalAgentCondition.md)
- [ExtrinsicData](../../interfaces/Types/ExtrinsicData/ExtrinsicData.md)
- [ExtrinsicDataWithFees](../../interfaces/Types/ExtrinsicDataWithFees/ExtrinsicDataWithFees.md)
- [Fees](../../interfaces/Types/Fees/Fees.md)
- [FungiblePortfolioMovement](../../interfaces/Types/FungiblePortfolioMovement/FungiblePortfolioMovement.md)
- [GroupedInstructions](../../interfaces/Types/GroupedInstructions/GroupedInstructions.md)
- [GroupedInvolvedInstructions](../../interfaces/Types/GroupedInvolvedInstructions/GroupedInvolvedInstructions.md)
- [HeldNfts](../../interfaces/Types/HeldNfts/HeldNfts.md)
- [HistoricAgentOperation](../../interfaces/Types/HistoricAgentOperation/HistoricAgentOperation.md)
- [IdentityCondition](../../interfaces/Types/IdentityCondition/IdentityCondition.md)
- [IdentityRole](../../interfaces/Types/IdentityRole/IdentityRole.md)
- [IdentityWithClaims](../../interfaces/Types/IdentityWithClaims/IdentityWithClaims.md)
- [ImmortalProcedureOptValue](../../interfaces/Types/ImmortalProcedureOptValue/ImmortalProcedureOptValue.md)
- [JurisdictionClaim](../../interfaces/Types/JurisdictionClaim/JurisdictionClaim.md)
- [KycClaim](../../interfaces/Types/KycClaim/KycClaim.md)
- [MiddlewareConfig](../../interfaces/Types/MiddlewareConfig/MiddlewareConfig.md)
- [MiddlewareMetadata](../../interfaces/Types/MiddlewareMetadata/MiddlewareMetadata.md)
- [MortalProcedureOptValue](../../interfaces/Types/MortalProcedureOptValue/MortalProcedureOptValue.md)
- [MultiClaimCondition](../../interfaces/Types/MultiClaimCondition/MultiClaimCondition.md)
- [NetworkProperties](../../interfaces/Types/NetworkProperties/NetworkProperties.md)
- [NoArgsProcedureMethod](../../interfaces/Types/NoArgsProcedureMethod/NoArgsProcedureMethod.md)
- [OfferingWithDetails](../../interfaces/Types/OfferingWithDetails/OfferingWithDetails.md)
- [OptionalArgsProcedureMethod](../../interfaces/Types/OptionalArgsProcedureMethod/OptionalArgsProcedureMethod.md)
- [PaginationOptions](../../interfaces/Types/PaginationOptions/PaginationOptions.md)
- [PayingAccountFees](../../interfaces/Types/PayingAccountFees/PayingAccountFees.md)
- [PercentageTransferRestriction](../../interfaces/Types/PercentageTransferRestriction/PercentageTransferRestriction.md)
- [PermissionGroups](../../interfaces/Types/PermissionGroups/PermissionGroups.md)
- [PermissionedAccount](../../interfaces/Types/PermissionedAccount/PermissionedAccount.md)
- [Permissions](../../interfaces/Types/Permissions/Permissions.md)
- [PlainTransactionArgument](../../interfaces/Types/PlainTransactionArgument/PlainTransactionArgument.md)
- [PolkadotConfig](../../interfaces/Types/PolkadotConfig/PolkadotConfig.md)
- [PortfolioCustodianRole](../../interfaces/Types/PortfolioCustodianRole/PortfolioCustodianRole.md)
- [PortfolioId](../../interfaces/Types/PortfolioId/PortfolioId.md)
- [ProcedureAuthorizationStatus](../../interfaces/Types/ProcedureAuthorizationStatus/ProcedureAuthorizationStatus.md)
- [ProcedureMethod](../../interfaces/Types/ProcedureMethod/ProcedureMethod.md)
- [ProcedureOpts](../../interfaces/Types/ProcedureOpts/ProcedureOpts.md)
- [ProtocolFees](../../interfaces/Types/ProtocolFees/ProtocolFees.md)
- [Requirement](../../interfaces/Types/Requirement/Requirement.md)
- [RequirementCompliance](../../interfaces/Types/RequirementCompliance/RequirementCompliance.md)
- [ResultSet](../../interfaces/Types/ResultSet/ResultSet.md)
- [ScheduleWithDetails](../../interfaces/Types/ScheduleWithDetails/ScheduleWithDetails.md)
- [Scope](../../interfaces/Types/Scope/Scope.md)
- [SectionPermissions](../../interfaces/Types/SectionPermissions/SectionPermissions.md)
- [SecurityIdentifier](../../interfaces/Types/SecurityIdentifier/SecurityIdentifier.md)
- [SellLockupClaim](../../interfaces/Types/SellLockupClaim/SellLockupClaim.md)
- [SignerValue](../../interfaces/Types/SignerValue/SignerValue.md)
- [SimpleEnumTransactionArgument](../../interfaces/Types/SimpleEnumTransactionArgument/SimpleEnumTransactionArgument.md)
- [SimplePermissions](../../interfaces/Types/SimplePermissions/SimplePermissions.md)
- [SingleClaimCondition](../../interfaces/Types/SingleClaimCondition/SingleClaimCondition.md)
- [SpWeightV2](../../interfaces/Types/SpWeightV2/SpWeightV2.md)
- [StatAccreditedClaimInput](../../interfaces/Types/StatAccreditedClaimInput/StatAccreditedClaimInput.md)
- [StatAffiliateClaimInput](../../interfaces/Types/StatAffiliateClaimInput/StatAffiliateClaimInput.md)
- [StatClaimIssuer](../../interfaces/Types/StatClaimIssuer/StatClaimIssuer.md)
- [StatJurisdictionClaimInput](../../interfaces/Types/StatJurisdictionClaimInput/StatJurisdictionClaimInput.md)
- [TickerOwnerRole](../../interfaces/Types/TickerOwnerRole/TickerOwnerRole.md)
- [TransactionPermissions](../../interfaces/Types/TransactionPermissions/TransactionPermissions.md)
- [TrustedClaimIssuer](../../interfaces/Types/TrustedClaimIssuer/TrustedClaimIssuer.md)
- [TxData](../../interfaces/Types/TxData/TxData.md)
- [VenueOwnerRole](../../interfaces/Types/VenueOwnerRole/VenueOwnerRole.md)

## References

### AcceptPrimaryKeyRotationParams

Re-exports [AcceptPrimaryKeyRotationParams](../../interfaces/API/Procedures/Types/AcceptPrimaryKeyRotationParams/AcceptPrimaryKeyRotationParams.md)

---

### AddAssetRequirementParams

Re-exports [AddAssetRequirementParams](../../interfaces/API/Procedures/Types/AddAssetRequirementParams/AddAssetRequirementParams.md)

---

### AddAssetStatParams

Re-exports [AddAssetStatParams](../API/Procedures/Types/Types.md#addassetstatparams)

---

### AddClaimCountStatParams

Re-exports [AddClaimCountStatParams](../API/Procedures/Types/Types.md#addclaimcountstatparams)

---

### AddClaimCountTransferRestrictionParams

Re-exports [AddClaimCountTransferRestrictionParams](../API/Procedures/Types/Types.md#addclaimcounttransferrestrictionparams)

---

### AddClaimPercentageStatParams

Re-exports [AddClaimPercentageStatParams](../API/Procedures/Types/Types.md#addclaimpercentagestatparams)

---

### AddClaimPercentageTransferRestrictionParams

Re-exports [AddClaimPercentageTransferRestrictionParams](../API/Procedures/Types/Types.md#addclaimpercentagetransferrestrictionparams)

---

### AddClaimsParams

Re-exports [AddClaimsParams](../../interfaces/API/Procedures/Types/AddClaimsParams/AddClaimsParams.md)

---

### AddCountStatParams

Re-exports [AddCountStatParams](../API/Procedures/Types/Types.md#addcountstatparams)

---

### AddCountTransferRestrictionParams

Re-exports [AddCountTransferRestrictionParams](../API/Procedures/Types/Types.md#addcounttransferrestrictionparams)

---

### AddInstructionParams

Re-exports [AddInstructionParams](../API/Procedures/Types/Types.md#addinstructionparams)

---

### AddInstructionWithVenueIdParams

Re-exports [AddInstructionWithVenueIdParams](../API/Procedures/Types/Types.md#addinstructionwithvenueidparams)

---

### AddInstructionsParams

Re-exports [AddInstructionsParams](../../interfaces/API/Procedures/Types/AddInstructionsParams/AddInstructionsParams.md)

---

### AddInvestorUniquenessClaimParams

Re-exports [AddInvestorUniquenessClaimParams](../../interfaces/API/Procedures/Types/AddInvestorUniquenessClaimParams/AddInvestorUniquenessClaimParams.md)

---

### AddPercentageStatParams

Re-exports [AddPercentageStatParams](../API/Procedures/Types/Types.md#addpercentagestatparams)

---

### AddPercentageTransferRestrictionParams

Re-exports [AddPercentageTransferRestrictionParams](../API/Procedures/Types/Types.md#addpercentagetransferrestrictionparams)

---

### AddRestrictionParams

Re-exports [AddRestrictionParams](../API/Procedures/Types/Types.md#addrestrictionparams)

---

### AffirmOrWithdrawInstructionParams

Re-exports [AffirmOrWithdrawInstructionParams](../API/Procedures/Types/Types.md#affirmorwithdrawinstructionparams)

---

### AffirmationStatus

Re-exports [AffirmationStatus](../../enums/API/Entities/Instruction/Types/AffirmationStatus/AffirmationStatus.md)

---

### AgentWithGroup

Re-exports [AgentWithGroup](../../interfaces/API/Entities/Asset/Types/AgentWithGroup/AgentWithGroup.md)

---

### AllowanceOperation

Re-exports [AllowanceOperation](../../enums/API/Procedures/Types/AllowanceOperation/AllowanceOperation.md)

---

### Asset

Re-exports [Asset](../API/Entities/Asset/Types/Types.md#asset)

---

### AssetBase

Re-exports [AssetBase](../../interfaces/API/Procedures/Types/AssetBase/AssetBase.md)

---

### AssetDetails

Re-exports [AssetDetails](../../interfaces/API/Entities/Asset/Types/AssetDetails/AssetDetails.md)

---

### AssetTx

Re-exports [AssetTx](../../enums/Generated/Types/AssetTx/AssetTx.md)

---

### AttestPrimaryKeyRotationParams

Re-exports [AttestPrimaryKeyRotationParams](../../interfaces/API/Procedures/Types/AttestPrimaryKeyRotationParams/AttestPrimaryKeyRotationParams.md)

---

### AuthorshipTx

Re-exports [AuthorshipTx](../../enums/Generated/Types/AuthorshipTx/AuthorshipTx.md)

---

### BabeTx

Re-exports [BabeTx](../../enums/Generated/Types/BabeTx/BabeTx.md)

---

### BalancesTx

Re-exports [BalancesTx](../../enums/Generated/Types/BalancesTx/BalancesTx.md)

---

### BridgeTx

Re-exports [BridgeTx](../../enums/Generated/Types/BridgeTx/BridgeTx.md)

---

### CaCheckpointType

Re-exports [CaCheckpointType](../../enums/API/Entities/Asset/Fungible/Checkpoints/Types/CaCheckpointType/CaCheckpointType.md)

---

### CapitalDistributionTx

Re-exports [CapitalDistributionTx](../../enums/Generated/Types/CapitalDistributionTx/CapitalDistributionTx.md)

---

### CddServiceProvidersTx

Re-exports [CddServiceProvidersTx](../../enums/Generated/Types/CddServiceProvidersTx/CddServiceProvidersTx.md)

---

### CheckpointScheduleParams

Re-exports [CheckpointScheduleParams](../API/Entities/CheckpointSchedule/Types/Types.md#checkpointscheduleparams)

---

### CheckpointTx

Re-exports [CheckpointTx](../../enums/Generated/Types/CheckpointTx/CheckpointTx.md)

---

### ClaimCountTransferRestrictionInput

Re-exports [ClaimCountTransferRestrictionInput](../../interfaces/API/Procedures/Types/ClaimCountTransferRestrictionInput/ClaimCountTransferRestrictionInput.md)

---

### ClaimOperation

Re-exports [ClaimOperation](../../enums/API/Procedures/Types/ClaimOperation/ClaimOperation.md)

---

### ClaimPercentageTransferRestrictionInput

Re-exports [ClaimPercentageTransferRestrictionInput](../../interfaces/API/Procedures/Types/ClaimPercentageTransferRestrictionInput/ClaimPercentageTransferRestrictionInput.md)

---

### CollectionKey

Re-exports [CollectionKey](../API/Entities/Asset/Types/Types.md#collectionkey)

---

### CollectionKeyInput

Re-exports [CollectionKeyInput](../API/Procedures/Types/Types.md#collectionkeyinput)

---

### CommitteeMembershipTx

Re-exports [CommitteeMembershipTx](../../enums/Generated/Types/CommitteeMembershipTx/CommitteeMembershipTx.md)

---

### ComplianceManagerTx

Re-exports [ComplianceManagerTx](../../enums/Generated/Types/ComplianceManagerTx/ComplianceManagerTx.md)

---

### ConfigureDividendDistributionParams

Re-exports [ConfigureDividendDistributionParams](../../interfaces/API/Procedures/Types/ConfigureDividendDistributionParams/ConfigureDividendDistributionParams.md)

---

### ConnectParams

Re-exports [ConnectParams](../../interfaces/API/Client/Polymesh/ConnectParams/ConnectParams.md)

---

### ContractsTx

Re-exports [ContractsTx](../../enums/Generated/Types/ContractsTx/ContractsTx.md)

---

### ControllerTransferParams

Re-exports [ControllerTransferParams](../../interfaces/API/Procedures/Types/ControllerTransferParams/ControllerTransferParams.md)

---

### CorporateActionDefaultConfig

Re-exports [CorporateActionDefaultConfig](../../interfaces/API/Entities/Asset/Fungible/CorporateActions/Types/CorporateActionDefaultConfig/CorporateActionDefaultConfig.md)

---

### CorporateActionKind

Re-exports [CorporateActionKind](../../enums/API/Entities/CorporateActionBase/Types/CorporateActionKind/CorporateActionKind.md)

---

### CorporateActionParams

Renames and re-exports [Params](../../interfaces/API/Entities/CorporateActionBase/Params/Params.md)

---

### CorporateActionTargets

Re-exports [CorporateActionTargets](../../interfaces/API/Entities/CorporateActionBase/Types/CorporateActionTargets/CorporateActionTargets.md)

---

### CorporateActionTx

Re-exports [CorporateActionTx](../../enums/Generated/Types/CorporateActionTx/CorporateActionTx.md)

---

### CorporateBallotTx

Re-exports [CorporateBallotTx](../../enums/Generated/Types/CorporateBallotTx/CorporateBallotTx.md)

---

### CountTransferRestrictionInput

Re-exports [CountTransferRestrictionInput](../../interfaces/API/Procedures/Types/CountTransferRestrictionInput/CountTransferRestrictionInput.md)

---

### CountryCode

Re-exports [CountryCode](../../enums/Generated/Types/CountryCode/CountryCode.md)

---

### CreateAssetParams

Re-exports [CreateAssetParams](../../interfaces/API/Procedures/Types/CreateAssetParams/CreateAssetParams.md)

---

### CreateAssetWithTickerParams

Re-exports [CreateAssetWithTickerParams](../../interfaces/API/Procedures/Types/CreateAssetWithTickerParams/CreateAssetWithTickerParams.md)

---

### CreateCheckpointScheduleParams

Re-exports [CreateCheckpointScheduleParams](../../interfaces/API/Procedures/Types/CreateCheckpointScheduleParams/CreateCheckpointScheduleParams.md)

---

### CreateChildIdentitiesParams

Re-exports [CreateChildIdentitiesParams](../../interfaces/API/Procedures/Types/CreateChildIdentitiesParams/CreateChildIdentitiesParams.md)

---

### CreateChildIdentityParams

Re-exports [CreateChildIdentityParams](../../interfaces/API/Procedures/Types/CreateChildIdentityParams/CreateChildIdentityParams.md)

---

### CreateGroupParams

Re-exports [CreateGroupParams](../../interfaces/API/Procedures/Types/CreateGroupParams/CreateGroupParams.md)

---

### CreateMultiSigParams

Re-exports [CreateMultiSigParams](../../interfaces/API/Procedures/Types/CreateMultiSigParams/CreateMultiSigParams.md)

---

### CreateNftCollectionParams

Re-exports [CreateNftCollectionParams](../../interfaces/API/Procedures/Types/CreateNftCollectionParams/CreateNftCollectionParams.md)

---

### CreateTransactionBatchParams

Re-exports [CreateTransactionBatchParams](../../interfaces/API/Procedures/Types/CreateTransactionBatchParams/CreateTransactionBatchParams.md)

---

### CreateVenueParams

Re-exports [CreateVenueParams](../../interfaces/API/Procedures/Types/CreateVenueParams/CreateVenueParams.md)

---

### DecreaseAllowanceParams

Re-exports [DecreaseAllowanceParams](../../interfaces/API/Procedures/Types/DecreaseAllowanceParams/DecreaseAllowanceParams.md)

---

### DistributionParticipant

Re-exports [DistributionParticipant](../../interfaces/API/Entities/DividendDistribution/Types/DistributionParticipant/DistributionParticipant.md)

---

### DividendDistributionDetails

Re-exports [DividendDistributionDetails](../../interfaces/API/Entities/DividendDistribution/Types/DividendDistributionDetails/DividendDistributionDetails.md)

---

### DividendDistributionParams

Re-exports [DividendDistributionParams](../../interfaces/API/Entities/DividendDistribution/DividendDistributionParams/DividendDistributionParams.md)

---

### EditClaimsParams

Re-exports [EditClaimsParams](../../interfaces/API/Procedures/Types/EditClaimsParams/EditClaimsParams.md)

---

### ExecuteManualInstructionParams

Re-exports [ExecuteManualInstructionParams](../API/Procedures/Types/Types.md#executemanualinstructionparams)

---

### ExternalAgentsTx

Re-exports [ExternalAgentsTx](../../enums/Generated/Types/ExternalAgentsTx/ExternalAgentsTx.md)

---

### FungibleLeg

Re-exports [FungibleLeg](../../interfaces/API/Entities/Instruction/Types/FungibleLeg/FungibleLeg.md)

---

### GetTransferRestrictionReturnType

Re-exports [GetTransferRestrictionReturnType](../API/Procedures/Types/Types.md#gettransferrestrictionreturntype)

---

### GlobalCollectionKeyInput

Re-exports [GlobalCollectionKeyInput](../../interfaces/API/Procedures/Types/GlobalCollectionKeyInput/GlobalCollectionKeyInput.md)

---

### GlobalMetadataKey

Re-exports [GlobalMetadataKey](../API/Entities/MetadataEntry/Types/Types.md#globalmetadatakey)

---

### GrandpaTx

Re-exports [GrandpaTx](../../enums/Generated/Types/GrandpaTx/GrandpaTx.md)

---

### HistoricAssetTransaction

Re-exports [HistoricAssetTransaction](../../interfaces/API/Entities/Asset/Types/HistoricAssetTransaction/HistoricAssetTransaction.md)

---

### HistoricInstruction

Re-exports [HistoricInstruction](../API/Entities/Venue/Types/Types.md#historicinstruction)

---

### HistoricSettlement

Re-exports [HistoricSettlement](../../interfaces/API/Entities/Portfolio/Types/HistoricSettlement/HistoricSettlement.md)

---

### IdentityBalance

Re-exports [IdentityBalance](../../interfaces/API/Entities/Asset/Types/IdentityBalance/IdentityBalance.md)

---

### IdentityTx

Re-exports [IdentityTx](../../enums/Generated/Types/IdentityTx/IdentityTx.md)

---

### ImOnlineTx

Re-exports [ImOnlineTx](../../enums/Generated/Types/ImOnlineTx/ImOnlineTx.md)

---

### IncreaseAllowanceParams

Re-exports [IncreaseAllowanceParams](../../interfaces/API/Procedures/Types/IncreaseAllowanceParams/IncreaseAllowanceParams.md)

---

### IndicesTx

Re-exports [IndicesTx](../../enums/Generated/Types/IndicesTx/IndicesTx.md)

---

### InputCaCheckpoint

Re-exports [InputCaCheckpoint](../API/Entities/Asset/Fungible/Checkpoints/Types/Types.md#inputcacheckpoint)

---

### InputTargets

Re-exports [InputTargets](../API/Entities/CorporateActionBase/Types/Types.md#inputtargets)

---

### InputTaxWithholding

Re-exports [InputTaxWithholding](../API/Entities/CorporateActionBase/Types/Types.md#inputtaxwithholding)

---

### InstructionAffirmation

Re-exports [InstructionAffirmation](../../interfaces/API/Entities/Instruction/Types/InstructionAffirmation/InstructionAffirmation.md)

---

### InstructionAffirmationOperation

Re-exports [InstructionAffirmationOperation](../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md)

---

### InstructionDetails

Re-exports [InstructionDetails](../API/Entities/Instruction/Types/Types.md#instructiondetails)

---

### InstructionEndCondition

Re-exports [InstructionEndCondition](../API/Entities/Instruction/Types/Types.md#instructionendcondition)

---

### InstructionFungibleLeg

Re-exports [InstructionFungibleLeg](../../interfaces/API/Procedures/Types/InstructionFungibleLeg/InstructionFungibleLeg.md)

---

### InstructionIdParams

Re-exports [InstructionIdParams](../../interfaces/API/Procedures/Types/InstructionIdParams/InstructionIdParams.md)

---

### InstructionLeg

Re-exports [InstructionLeg](../API/Procedures/Types/Types.md#instructionleg)

---

### InstructionNftLeg

Re-exports [InstructionNftLeg](../../interfaces/API/Procedures/Types/InstructionNftLeg/InstructionNftLeg.md)

---

### InstructionStatus

Re-exports [InstructionStatus](../../enums/API/Entities/Instruction/Types/InstructionStatus/InstructionStatus.md)

---

### InstructionStatusResult

Re-exports [InstructionStatusResult](../API/Entities/Instruction/Types/Types.md#instructionstatusresult)

---

### InstructionType

Re-exports [InstructionType](../../enums/API/Entities/Instruction/Types/InstructionType/InstructionType.md)

---

### InvestInOfferingParams

Re-exports [InvestInOfferingParams](../../interfaces/API/Procedures/Types/InvestInOfferingParams/InvestInOfferingParams.md)

---

### Investment

Re-exports [Investment](../../interfaces/API/Entities/Offering/Types/Investment/Investment.md)

---

### InviteAccountParams

Re-exports [InviteAccountParams](../../interfaces/API/Procedures/Types/InviteAccountParams/InviteAccountParams.md)

---

### InviteExternalAgentParams

Re-exports [InviteExternalAgentParams](../../interfaces/API/Procedures/Types/InviteExternalAgentParams/InviteExternalAgentParams.md)

---

### IssueNftParams

Re-exports [IssueNftParams](../API/Procedures/Types/Types.md#issuenftparams)

---

### LaunchOfferingParams

Re-exports [LaunchOfferingParams](../../interfaces/API/Procedures/Types/LaunchOfferingParams/LaunchOfferingParams.md)

---

### Leg

Re-exports [Leg](../API/Entities/Instruction/Types/Types.md#leg)

---

### LinkCaDocsParams

Re-exports [LinkCaDocsParams](../../interfaces/API/Procedures/Types/LinkCaDocsParams/LinkCaDocsParams.md)

---

### LocalCollectionKeyInput

Re-exports [LocalCollectionKeyInput](../../interfaces/API/Procedures/Types/LocalCollectionKeyInput/LocalCollectionKeyInput.md)

---

### MetadataDetails

Re-exports [MetadataDetails](../../interfaces/API/Entities/MetadataEntry/Types/MetadataDetails/MetadataDetails.md)

---

### MetadataKeyId

Re-exports [MetadataKeyId](../API/Entities/Asset/Types/Types.md#metadatakeyid)

---

### MetadataLockStatus

Re-exports [MetadataLockStatus](../../enums/API/Entities/MetadataEntry/Types/MetadataLockStatus/MetadataLockStatus.md)

---

### MetadataSpec

Re-exports [MetadataSpec](../../interfaces/API/Entities/MetadataEntry/Types/MetadataSpec/MetadataSpec.md)

---

### MetadataType

Re-exports [MetadataType](../../enums/API/Entities/MetadataEntry/Types/MetadataType/MetadataType.md)

---

### MetadataValue

Re-exports [MetadataValue](../API/Entities/MetadataEntry/Types/Types.md#metadatavalue)

---

### MetadataValueDetails

Re-exports [MetadataValueDetails](../API/Entities/MetadataEntry/Types/Types.md#metadatavaluedetails)

---

### ModifyAssetParams

Re-exports [ModifyAssetParams](../API/Procedures/Types/Types.md#modifyassetparams)

---

### ModifyAssetTrustedClaimIssuersAddSetParams

Re-exports [ModifyAssetTrustedClaimIssuersAddSetParams](../../interfaces/API/Procedures/Types/ModifyAssetTrustedClaimIssuersAddSetParams/ModifyAssetTrustedClaimIssuersAddSetParams.md)

---

### ModifyAssetTrustedClaimIssuersRemoveParams

Re-exports [ModifyAssetTrustedClaimIssuersRemoveParams](../../interfaces/API/Procedures/Types/ModifyAssetTrustedClaimIssuersRemoveParams/ModifyAssetTrustedClaimIssuersRemoveParams.md)

---

### ModifyCaCheckpointParams

Re-exports [ModifyCaCheckpointParams](../../interfaces/API/Procedures/Types/ModifyCaCheckpointParams/ModifyCaCheckpointParams.md)

---

### ModifyCaDefaultConfigParams

Re-exports [ModifyCaDefaultConfigParams](../API/Procedures/Types/Types.md#modifycadefaultconfigparams)

---

### ModifyClaimsParams

Re-exports [ModifyClaimsParams](../API/Procedures/Types/Types.md#modifyclaimsparams)

---

### ModifyComplianceRequirementParams

Re-exports [ModifyComplianceRequirementParams](../API/Procedures/Types/Types.md#modifycompliancerequirementparams)

---

### ModifyCorporateActionsAgentParams

Re-exports [ModifyCorporateActionsAgentParams](../../interfaces/API/Procedures/Types/ModifyCorporateActionsAgentParams/ModifyCorporateActionsAgentParams.md)

---

### ModifyInstructionAffirmationParams

Re-exports [ModifyInstructionAffirmationParams](../API/Procedures/Types/Types.md#modifyinstructionaffirmationparams)

---

### ModifyMultiSigParams

Re-exports [ModifyMultiSigParams](../../interfaces/API/Procedures/Types/ModifyMultiSigParams/ModifyMultiSigParams.md)

---

### ModifyOfferingTimesParams

Re-exports [ModifyOfferingTimesParams](../API/Procedures/Types/Types.md#modifyofferingtimesparams)

---

### ModifyPrimaryIssuanceAgentParams

Re-exports [ModifyPrimaryIssuanceAgentParams](../../interfaces/API/Procedures/Types/ModifyPrimaryIssuanceAgentParams/ModifyPrimaryIssuanceAgentParams.md)

---

### ModifySignerPermissionsParams

Re-exports [ModifySignerPermissionsParams](../../interfaces/API/Procedures/Types/ModifySignerPermissionsParams/ModifySignerPermissionsParams.md)

---

### ModifyVenueParams

Re-exports [ModifyVenueParams](../API/Procedures/Types/Types.md#modifyvenueparams)

---

### ModuleName

Re-exports [ModuleName](../../enums/Generated/Types/ModuleName/ModuleName.md)

---

### MoveFundsParams

Re-exports [MoveFundsParams](../../interfaces/API/Procedures/Types/MoveFundsParams/MoveFundsParams.md)

---

### MultiSigDetails

Re-exports [MultiSigDetails](../../interfaces/API/Entities/Account/MultiSig/Types/MultiSigDetails/MultiSigDetails.md)

---

### MultiSigProposalAction

Re-exports [MultiSigProposalAction](../../enums/API/Entities/MultiSigProposal/Types/MultiSigProposalAction/MultiSigProposalAction.md)

---

### MultiSigProposalDetails

Re-exports [MultiSigProposalDetails](../../interfaces/API/Entities/MultiSigProposal/Types/MultiSigProposalDetails/MultiSigProposalDetails.md)

---

### MultiSigProposalVote

Re-exports [MultiSigProposalVote](../API/Entities/MultiSigProposal/Types/Types.md#multisigproposalvote)

---

### MultiSigTx

Re-exports [MultiSigTx](../../enums/Generated/Types/MultiSigTx/MultiSigTx.md)

---

### NftLeg

Re-exports [NftLeg](../../interfaces/API/Entities/Instruction/Types/NftLeg/NftLeg.md)

---

### NftMetadata

Re-exports [NftMetadata](../../interfaces/API/Entities/Asset/Types/NftMetadata/NftMetadata.md)

---

### NftMetadataInput

Re-exports [NftMetadataInput](../API/Procedures/Types/Types.md#nftmetadatainput)

---

### NftTx

Re-exports [NftTx](../../enums/Generated/Types/NftTx/NftTx.md)

---

### OfferingBalanceStatus

Re-exports [OfferingBalanceStatus](../../enums/API/Entities/Offering/Types/OfferingBalanceStatus/OfferingBalanceStatus.md)

---

### OfferingDetails

Re-exports [OfferingDetails](../../interfaces/API/Entities/Offering/Types/OfferingDetails/OfferingDetails.md)

---

### OfferingSaleStatus

Re-exports [OfferingSaleStatus](../../enums/API/Entities/Offering/Types/OfferingSaleStatus/OfferingSaleStatus.md)

---

### OfferingStatus

Re-exports [OfferingStatus](../../interfaces/API/Entities/Offering/Types/OfferingStatus/OfferingStatus.md)

---

### OfferingTier

Re-exports [OfferingTier](../../interfaces/API/Entities/Offering/Types/OfferingTier/OfferingTier.md)

---

### OfferingTimingStatus

Re-exports [OfferingTimingStatus](../../enums/API/Entities/Offering/Types/OfferingTimingStatus/OfferingTimingStatus.md)

---

### PayDividendsParams

Re-exports [PayDividendsParams](../../interfaces/API/Procedures/Types/PayDividendsParams/PayDividendsParams.md)

---

### PercentageTransferRestrictionInput

Re-exports [PercentageTransferRestrictionInput](../../interfaces/API/Procedures/Types/PercentageTransferRestrictionInput/PercentageTransferRestrictionInput.md)

---

### PipsTx

Re-exports [PipsTx](../../enums/Generated/Types/PipsTx/PipsTx.md)

---

### PolymeshCommitteeTx

Re-exports [PolymeshCommitteeTx](../../enums/Generated/Types/PolymeshCommitteeTx/PolymeshCommitteeTx.md)

---

### PolymeshContractsTx

Re-exports [PolymeshContractsTx](../../enums/Generated/Types/PolymeshContractsTx/PolymeshContractsTx.md)

---

### PolymeshError

Re-exports [PolymeshError](../Base/Types/Types.md#polymesherror)

---

### PolymeshTransaction

Re-exports [PolymeshTransaction](../Base/Types/Types.md#polymeshtransaction)

---

### PolymeshTransactionBatch

Re-exports [PolymeshTransactionBatch](../Base/Types/Types.md#polymeshtransactionbatch)

---

### PortfolioBalance

Re-exports [PortfolioBalance](../../interfaces/API/Entities/Portfolio/Types/PortfolioBalance/PortfolioBalance.md)

---

### PortfolioCollection

Re-exports [PortfolioCollection](../../interfaces/API/Entities/Portfolio/Types/PortfolioCollection/PortfolioCollection.md)

---

### PortfolioTx

Re-exports [PortfolioTx](../../enums/Generated/Types/PortfolioTx/PortfolioTx.md)

---

### PreimageTx

Re-exports [PreimageTx](../../enums/Generated/Types/PreimageTx/PreimageTx.md)

---

### ProposalStatus

Re-exports [ProposalStatus](../../enums/API/Entities/MultiSigProposal/Types/ProposalStatus/ProposalStatus.md)

---

### ProtocolFeeTx

Re-exports [ProtocolFeeTx](../../enums/Generated/Types/ProtocolFeeTx/ProtocolFeeTx.md)

---

### RedeemNftParams

Re-exports [RedeemNftParams](../../interfaces/API/Procedures/Types/RedeemNftParams/RedeemNftParams.md)

---

### RedeemTokensParams

Re-exports [RedeemTokensParams](../../interfaces/API/Procedures/Types/RedeemTokensParams/RedeemTokensParams.md)

---

### RegisterCustomClaimTypeParams

Re-exports [RegisterCustomClaimTypeParams](../../interfaces/API/Procedures/Types/RegisterCustomClaimTypeParams/RegisterCustomClaimTypeParams.md)

---

### RegisterIdentityParams

Re-exports [RegisterIdentityParams](../../interfaces/API/Procedures/Types/RegisterIdentityParams/RegisterIdentityParams.md)

---

### RegisterMetadataParams

Re-exports [RegisterMetadataParams](../API/Procedures/Types/Types.md#registermetadataparams)

---

### RejectInstructionParams

Re-exports [RejectInstructionParams](../API/Procedures/Types/Types.md#rejectinstructionparams)

---

### RelayerTx

Re-exports [RelayerTx](../../enums/Generated/Types/RelayerTx/RelayerTx.md)

---

### RemoveAssetRequirementParams

Re-exports [RemoveAssetRequirementParams](../../interfaces/API/Procedures/Types/RemoveAssetRequirementParams/RemoveAssetRequirementParams.md)

---

### RemoveAssetStatParams

Re-exports [RemoveAssetStatParams](../API/Procedures/Types/Types.md#removeassetstatparams)

---

### RemoveBalanceStatParams

Re-exports [RemoveBalanceStatParams](../API/Procedures/Types/Types.md#removebalancestatparams)

---

### RemoveCheckpointScheduleParams

Re-exports [RemoveCheckpointScheduleParams](../../interfaces/API/Procedures/Types/RemoveCheckpointScheduleParams/RemoveCheckpointScheduleParams.md)

---

### RemoveCorporateActionParams

Re-exports [RemoveCorporateActionParams](../../interfaces/API/Procedures/Types/RemoveCorporateActionParams/RemoveCorporateActionParams.md)

---

### RemoveCountStatParams

Re-exports [RemoveCountStatParams](../API/Procedures/Types/Types.md#removecountstatparams)

---

### RemoveExternalAgentParams

Re-exports [RemoveExternalAgentParams](../../interfaces/API/Procedures/Types/RemoveExternalAgentParams/RemoveExternalAgentParams.md)

---

### RemoveScopedBalanceParams

Re-exports [RemoveScopedBalanceParams](../API/Procedures/Types/Types.md#removescopedbalanceparams)

---

### RemoveScopedCountParams

Re-exports [RemoveScopedCountParams](../API/Procedures/Types/Types.md#removescopedcountparams)

---

### RemoveSecondaryAccountsParams

Re-exports [RemoveSecondaryAccountsParams](../../interfaces/API/Procedures/Types/RemoveSecondaryAccountsParams/RemoveSecondaryAccountsParams.md)

---

### RenamePortfolioParams

Re-exports [RenamePortfolioParams](../../interfaces/API/Procedures/Types/RenamePortfolioParams/RenamePortfolioParams.md)

---

### ReserveTickerParams

Re-exports [ReserveTickerParams](../../interfaces/API/Procedures/Types/ReserveTickerParams/ReserveTickerParams.md)

---

### RevokeClaimsParams

Re-exports [RevokeClaimsParams](../../interfaces/API/Procedures/Types/RevokeClaimsParams/RevokeClaimsParams.md)

---

### RewardsTx

Re-exports [RewardsTx](../../enums/Generated/Types/RewardsTx/RewardsTx.md)

---

### RotatePrimaryKeyParams

Re-exports [RotatePrimaryKeyParams](../../interfaces/API/Procedures/Types/RotatePrimaryKeyParams/RotatePrimaryKeyParams.md)

---

### ScheduleDetails

Re-exports [ScheduleDetails](../../interfaces/API/Entities/CheckpointSchedule/Types/ScheduleDetails/ScheduleDetails.md)

---

### SchedulerTx

Re-exports [SchedulerTx](../../enums/Generated/Types/SchedulerTx/SchedulerTx.md)

---

### ScopeClaimProof

Re-exports [ScopeClaimProof](../../interfaces/API/Procedures/Types/ScopeClaimProof/ScopeClaimProof.md)

---

### SessionTx

Re-exports [SessionTx](../../enums/Generated/Types/SessionTx/SessionTx.md)

---

### SetAllowanceParams

Re-exports [SetAllowanceParams](../../interfaces/API/Procedures/Types/SetAllowanceParams/SetAllowanceParams.md)

---

### SetAssetDocumentsParams

Re-exports [SetAssetDocumentsParams](../../interfaces/API/Procedures/Types/SetAssetDocumentsParams/SetAssetDocumentsParams.md)

---

### SetAssetRequirementsParams

Re-exports [SetAssetRequirementsParams](../../interfaces/API/Procedures/Types/SetAssetRequirementsParams/SetAssetRequirementsParams.md)

---

### SetAssetStatParams

Re-exports [SetAssetStatParams](../API/Procedures/Types/Types.md#setassetstatparams)

---

### SetClaimCountTransferRestrictionsParams

Re-exports [SetClaimCountTransferRestrictionsParams](../../interfaces/API/Procedures/Types/SetClaimCountTransferRestrictionsParams/SetClaimCountTransferRestrictionsParams.md)

---

### SetClaimPercentageTransferRestrictionsParams

Re-exports [SetClaimPercentageTransferRestrictionsParams](../../interfaces/API/Procedures/Types/SetClaimPercentageTransferRestrictionsParams/SetClaimPercentageTransferRestrictionsParams.md)

---

### SetCountTransferRestrictionsParams

Re-exports [SetCountTransferRestrictionsParams](../../interfaces/API/Procedures/Types/SetCountTransferRestrictionsParams/SetCountTransferRestrictionsParams.md)

---

### SetCustodianParams

Re-exports [SetCustodianParams](../../interfaces/API/Procedures/Types/SetCustodianParams/SetCustodianParams.md)

---

### SetGroupPermissionsParams

Re-exports [SetGroupPermissionsParams](../../interfaces/API/Procedures/Types/SetGroupPermissionsParams/SetGroupPermissionsParams.md)

---

### SetMetadataParams

Re-exports [SetMetadataParams](../API/Procedures/Types/Types.md#setmetadataparams)

---

### SetPercentageTransferRestrictionsParams

Re-exports [SetPercentageTransferRestrictionsParams](../../interfaces/API/Procedures/Types/SetPercentageTransferRestrictionsParams/SetPercentageTransferRestrictionsParams.md)

---

### SetPermissionGroupParams

Re-exports [SetPermissionGroupParams](../../interfaces/API/Procedures/Types/SetPermissionGroupParams/SetPermissionGroupParams.md)

---

### SetRestrictionsParams

Re-exports [SetRestrictionsParams](../API/Procedures/Types/Types.md#setrestrictionsparams)

---

### SetVenueFilteringParams

Re-exports [SetVenueFilteringParams](../API/Procedures/Types/Types.md#setvenuefilteringparams)

---

### SettlementLeg

Re-exports [SettlementLeg](../API/Entities/Portfolio/Types/Types.md#settlementleg)

---

### SettlementTx

Re-exports [SettlementTx](../../enums/Generated/Types/SettlementTx/SettlementTx.md)

---

### StakingTx

Re-exports [StakingTx](../../enums/Generated/Types/StakingTx/StakingTx.md)

---

### StatisticsTx

Re-exports [StatisticsTx](../../enums/Generated/Types/StatisticsTx/StatisticsTx.md)

---

### StoTx

Re-exports [StoTx](../../enums/Generated/Types/StoTx/StoTx.md)

---

### SubsidizeAccountParams

Re-exports [SubsidizeAccountParams](../../interfaces/API/Procedures/Types/SubsidizeAccountParams/SubsidizeAccountParams.md)

---

### SubsidyData

Re-exports [SubsidyData](../../interfaces/API/Entities/Subsidy/Types/SubsidyData/SubsidyData.md)

---

### SubsidyWithAllowance

Re-exports [SubsidyWithAllowance](../../interfaces/API/Entities/Subsidy/Types/SubsidyWithAllowance/SubsidyWithAllowance.md)

---

### SudoTx

Re-exports [SudoTx](../../enums/Generated/Types/SudoTx/SudoTx.md)

---

### SystemTx

Re-exports [SystemTx](../../enums/Generated/Types/SystemTx/SystemTx.md)

---

### TargetTreatment

Re-exports [TargetTreatment](../../enums/API/Entities/CorporateActionBase/Types/TargetTreatment/TargetTreatment.md)

---

### TaxWithholding

Re-exports [TaxWithholding](../../interfaces/API/Entities/CorporateActionBase/Types/TaxWithholding/TaxWithholding.md)

---

### TechnicalCommitteeMembershipTx

Re-exports [TechnicalCommitteeMembershipTx](../../enums/Generated/Types/TechnicalCommitteeMembershipTx/TechnicalCommitteeMembershipTx.md)

---

### TechnicalCommitteeTx

Re-exports [TechnicalCommitteeTx](../../enums/Generated/Types/TechnicalCommitteeTx/TechnicalCommitteeTx.md)

---

### TestUtilsTx

Re-exports [TestUtilsTx](../../enums/Generated/Types/TestUtilsTx/TestUtilsTx.md)

---

### TickerReservationDetails

Re-exports [TickerReservationDetails](../../interfaces/API/Entities/TickerReservation/Types/TickerReservationDetails/TickerReservationDetails.md)

---

### TickerReservationStatus

Re-exports [TickerReservationStatus](../../enums/API/Entities/TickerReservation/Types/TickerReservationStatus/TickerReservationStatus.md)

---

### Tier

Re-exports [Tier](../../interfaces/API/Entities/Offering/Types/Tier/Tier.md)

---

### TimestampTx

Re-exports [TimestampTx](../../enums/Generated/Types/TimestampTx/TimestampTx.md)

---

### TransactionsParams

Re-exports [TransactionsParams](../../interfaces/API/Procedures/Types/TransactionsParams/TransactionsParams.md)

---

### TransferAssetOwnershipParams

Re-exports [TransferAssetOwnershipParams](../../interfaces/API/Procedures/Types/TransferAssetOwnershipParams/TransferAssetOwnershipParams.md)

---

### TransferBreakdown

Re-exports [TransferBreakdown](../../interfaces/API/Entities/Asset/Types/TransferBreakdown/TransferBreakdown.md)

---

### TransferPolyxParams

Re-exports [TransferPolyxParams](../../interfaces/API/Procedures/Types/TransferPolyxParams/TransferPolyxParams.md)

---

### TransferRestrictionResult

Re-exports [TransferRestrictionResult](../../interfaces/API/Entities/Asset/Types/TransferRestrictionResult/TransferRestrictionResult.md)

---

### TransferTickerOwnershipParams

Re-exports [TransferTickerOwnershipParams](../../interfaces/API/Procedures/Types/TransferTickerOwnershipParams/TransferTickerOwnershipParams.md)

---

### TreasuryTx

Re-exports [TreasuryTx](../../enums/Generated/Types/TreasuryTx/TreasuryTx.md)

---

### TxGroupParams

Re-exports [TxGroupParams](../../interfaces/API/Procedures/Types/TxGroupParams/TxGroupParams.md)

---

### TxTag

Re-exports [TxTag](../Generated/Types/Types.md#txtag)

---

### TxTags

Re-exports [TxTags](../Generated/Types/Types.md#txtags)

---

### UniqueIdentifiers

Re-exports [UniqueIdentifiers](../../interfaces/API/Entities/Asset/Types/UniqueIdentifiers/UniqueIdentifiers.md)

---

### UnlinkChildParams

Re-exports [UnlinkChildParams](../../interfaces/API/Procedures/Types/UnlinkChildParams/UnlinkChildParams.md)

---

### UpgradeCommitteeMembershipTx

Re-exports [UpgradeCommitteeMembershipTx](../../enums/Generated/Types/UpgradeCommitteeMembershipTx/UpgradeCommitteeMembershipTx.md)

---

### UpgradeCommitteeTx

Re-exports [UpgradeCommitteeTx](../../enums/Generated/Types/UpgradeCommitteeTx/UpgradeCommitteeTx.md)

---

### UtilityTx

Re-exports [UtilityTx](../../enums/Generated/Types/UtilityTx/UtilityTx.md)

---

### VenueDetails

Re-exports [VenueDetails](../../interfaces/API/Entities/Venue/Types/VenueDetails/VenueDetails.md)

---

### VenueType

Re-exports [VenueType](../../enums/API/Entities/Venue/Types/VenueType/VenueType.md)

---

### WaivePermissionsParams

Re-exports [WaivePermissionsParams](../../interfaces/API/Procedures/Types/WaivePermissionsParams/WaivePermissionsParams.md)

## Type Aliases

### AccountBalance

Ƭ **AccountBalance**: [`Balance`](../../interfaces/Types/Balance/Balance.md)

#### Defined in

[types/index.ts:774](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L774)

---

### AddRelayerPayingKeyAuthorizationData

Ƭ **AddRelayerPayingKeyAuthorizationData**: `Object`

#### Type declaration

| Name    | Type                                                                                                  |
| :------ | :---------------------------------------------------------------------------------------------------- |
| `type`  | [`AddRelayerPayingKey`](../../enums/Types/AuthorizationType/AuthorizationType.md#addrelayerpayingkey) |
| `value` | [`SubsidyData`](../../interfaces/API/Entities/Subsidy/Types/SubsidyData/SubsidyData.md)               |

#### Defined in

[types/index.ts:1161](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1161)

---

### AnyJson

Ƭ **AnyJson**: `string` \| `number` \| `boolean` \| `null` \| `undefined` \| [`AnyJson`](Types.md#anyjson)[] \| \{ `[index: string]`: [`AnyJson`](Types.md#anyjson); }

Represents JSON serializable data. Used for cases when the value can take on many types, like args for a MultiSig proposal.

#### Defined in

[types/index.ts:1738](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1738)

---

### AttestPrimaryKeyRotationAuthorizationData

Ƭ **AttestPrimaryKeyRotationAuthorizationData**: `Object`

#### Type declaration

| Name    | Type                                                                                                            |
| :------ | :-------------------------------------------------------------------------------------------------------------- |
| `type`  | [`AttestPrimaryKeyRotation`](../../enums/Types/AuthorizationType/AuthorizationType.md#attestprimarykeyrotation) |
| `value` | [`Identity`](../../classes/API/Entities/Identity/Identity.md)                                                   |

#### Defined in

[types/index.ts:1132](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1132)

---

### Authorization

Ƭ **Authorization**: [`AttestPrimaryKeyRotationAuthorizationData`](Types.md#attestprimarykeyrotationauthorizationdata) \| [`RotatePrimaryKeyAuthorizationData`](Types.md#rotateprimarykeyauthorizationdata) \| [`JoinIdentityAuthorizationData`](Types.md#joinidentityauthorizationdata) \| [`PortfolioCustodyAuthorizationData`](Types.md#portfoliocustodyauthorizationdata) \| [`BecomeAgentAuthorizationData`](Types.md#becomeagentauthorizationdata) \| [`AddRelayerPayingKeyAuthorizationData`](Types.md#addrelayerpayingkeyauthorizationdata) \| [`RotatePrimaryKeyToSecondaryData`](Types.md#rotateprimarykeytosecondarydata) \| [`GenericAuthorizationData`](Types.md#genericauthorizationdata)

Authorization request data corresponding to type

#### Defined in

[types/index.ts:1182](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1182)

---

### BecomeAgentAuthorizationData

Ƭ **BecomeAgentAuthorizationData**: `Object`

#### Type declaration

| Name    | Type                                                                                                                                                                                                      |
| :------ | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `type`  | [`BecomeAgent`](../../enums/Types/AuthorizationType/AuthorizationType.md#becomeagent)                                                                                                                     |
| `value` | [`KnownPermissionGroup`](../../classes/API/Entities/KnownPermissionGroup/KnownPermissionGroup.md) \| [`CustomPermissionGroup`](../../classes/API/Entities/CustomPermissionGroup/CustomPermissionGroup.md) |

#### Defined in

[types/index.ts:1156](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1156)

---

### Claim

Ƭ **Claim**: [`ScopedClaim`](Types.md#scopedclaim) \| [`UnscopedClaim`](Types.md#unscopedclaim)

#### Defined in

[types/index.ts:308](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L308)

---

### ClaimCountStatInput

Ƭ **ClaimCountStatInput**: \{ `claimType`: [`Accredited`](../../enums/Types/ClaimType/ClaimType.md#accredited) ; `issuer`: [`Identity`](../../classes/API/Entities/Identity/Identity.md) ; `value`: \{ `accredited`: `BigNumber` ; `nonAccredited`: `BigNumber` } } \| \{ `claimType`: [`Affiliate`](../../enums/Types/ClaimType/ClaimType.md#affiliate) ; `issuer`: [`Identity`](../../classes/API/Entities/Identity/Identity.md) ; `value`: \{ `affiliate`: `BigNumber` ; `nonAffiliate`: `BigNumber` } } \| \{ `claimType`: [`Jurisdiction`](../../enums/Types/ClaimType/ClaimType.md#jurisdiction) ; `issuer`: [`Identity`](../../classes/API/Entities/Identity/Identity.md) ; `value`: \{ `count`: `BigNumber` ; `countryCode`: [`CountryCode`](../../enums/Generated/Types/CountryCode/CountryCode.md) }[] }

#### Defined in

[types/index.ts:1458](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1458)

---

### Condition

Ƭ **Condition**: [`SingleClaimCondition`](../../interfaces/Types/SingleClaimCondition/SingleClaimCondition.md) \| [`MultiClaimCondition`](../../interfaces/Types/MultiClaimCondition/MultiClaimCondition.md) \| [`IdentityCondition`](../../interfaces/Types/IdentityCondition/IdentityCondition.md) \| [`ExternalAgentCondition`](../../interfaces/Types/ExternalAgentCondition/ExternalAgentCondition.md) & [`ConditionBase`](../../interfaces/Types/ConditionBase/ConditionBase.md)

#### Defined in

[types/index.ts:471](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L471)

---

### CustomClaimType

Ƭ **CustomClaimType**: `Object`

CustomClaimType

#### Type declaration

| Name   | Type        |
| :----- | :---------- |
| `id`   | `BigNumber` |
| `name` | `string`    |

#### Defined in

[types/index.ts:1730](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1730)

---

### CustomClaimTypeWithDid

Ƭ **CustomClaimTypeWithDid**: [`CustomClaimType`](Types.md#customclaimtype) & \{ `did?`: `string` }

CustomClaimType with DID that registered the CustomClaimType

#### Defined in

[types/index.ts:1760](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1760)

---

### GenericAuthorizationData

Ƭ **GenericAuthorizationData**: `Object`

#### Type declaration

| Name    | Type                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| :------ | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `type`  | `Exclude`\<[`AuthorizationType`](../../enums/Types/AuthorizationType/AuthorizationType.md), [`RotatePrimaryKey`](../../enums/Types/AuthorizationType/AuthorizationType.md#rotateprimarykey) \| [`JoinIdentity`](../../enums/Types/AuthorizationType/AuthorizationType.md#joinidentity) \| [`PortfolioCustody`](../../enums/Types/AuthorizationType/AuthorizationType.md#portfoliocustody) \| [`BecomeAgent`](../../enums/Types/AuthorizationType/AuthorizationType.md#becomeagent) \| [`AddRelayerPayingKey`](../../enums/Types/AuthorizationType/AuthorizationType.md#addrelayerpayingkey) \| [`RotatePrimaryKeyToSecondary`](../../enums/Types/AuthorizationType/AuthorizationType.md#rotateprimarykeytosecondary) \| [`AttestPrimaryKeyRotation`](../../enums/Types/AuthorizationType/AuthorizationType.md#attestprimarykeyrotation)\> |
| `value` | `string`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |

#### Defined in

[types/index.ts:1166](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1166)

---

### GenericPolymeshTransaction

Ƭ **GenericPolymeshTransaction**\<`ProcedureReturnValue`, `ReturnValue`\>: [`PolymeshTransaction`](../../classes/Base/PolymeshTransaction/PolymeshTransaction.md)\<`ProcedureReturnValue`, `ReturnValue`\> \| [`PolymeshTransactionBatch`](../../classes/Base/PolymeshTransactionBatch/PolymeshTransactionBatch.md)\<`ProcedureReturnValue`, `ReturnValue`\>

#### Type parameters

| Name                   |
| :--------------------- |
| `ProcedureReturnValue` |
| `ReturnValue`          |

#### Defined in

[types/index.ts:1678](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1678)

---

### GroupPermissions

Ƭ **GroupPermissions**: `Pick`\<[`Permissions`](../../interfaces/Types/Permissions/Permissions.md), `"transactions"` \| `"transactionGroups"`\>

Asset permissions shared by agents in a group

#### Defined in

[types/index.ts:1039](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1039)

---

### InputCondition

Ƭ **InputCondition**: [`SingleClaimCondition`](../../interfaces/Types/SingleClaimCondition/SingleClaimCondition.md) \| [`MultiClaimCondition`](../../interfaces/Types/MultiClaimCondition/MultiClaimCondition.md) \| [`Modify`](Utils/Utils.md#modify) \<[`IdentityCondition`](../../interfaces/Types/IdentityCondition/IdentityCondition.md), \{ `identity`: `string` \| [`Identity`](../../classes/API/Entities/Identity/Identity.md) }\> \| [`ExternalAgentCondition`](../../interfaces/Types/ExternalAgentCondition/ExternalAgentCondition.md) & [`InputConditionBase`](Types.md#inputconditionbase)

#### Defined in

[types/index.ts:479](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L479)

---

### InputConditionBase

Ƭ **InputConditionBase**: [`Modify`](Utils/Utils.md#modify) \<[`ConditionBase`](../../interfaces/Types/ConditionBase/ConditionBase.md), \{ `trustedClaimIssuers?`: [`InputTrustedClaimIssuer`](Types.md#inputtrustedclaimissuer)[] }\>

#### Defined in

[types/index.ts:442](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L442)

---

### InputCorporateActionTargets

Ƭ **InputCorporateActionTargets**: [`Modify`](Utils/Utils.md#modify) \<[`CorporateActionTargets`](../../interfaces/API/Entities/CorporateActionBase/Types/CorporateActionTargets/CorporateActionTargets.md), \{ `identities`: (`string` \| [`Identity`](../../classes/API/Entities/Identity/Identity.md))[] }\>

Targets of a corporate action in a flexible structure for input purposes

#### Defined in

[types/index.ts:1661](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1661)

---

### InputCorporateActionTaxWithholdings

Ƭ **InputCorporateActionTaxWithholdings**: [`Modify`](Utils/Utils.md#modify) \<[`TaxWithholding`](../../interfaces/API/Entities/CorporateActionBase/Types/TaxWithholding/TaxWithholding.md), \{ `identity`: `string` \| [`Identity`](../../classes/API/Entities/Identity/Identity.md) }\>[]

Per-Identity tax withholdings of a corporate action in a flexible structure for input purposes

#### Defined in

[types/index.ts:1671](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1671)

---

### InputRequirement

Ƭ **InputRequirement**: [`Modify`](Utils/Utils.md#modify) \<[`Requirement`](../../interfaces/Types/Requirement/Requirement.md), \{ `conditions`: [`InputCondition`](Types.md#inputcondition)[] }\>

#### Defined in

[types/index.ts:505](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L505)

---

### InputStatClaim

Ƭ **InputStatClaim**: [`StatJurisdictionClaimInput`](../../interfaces/Types/StatJurisdictionClaimInput/StatJurisdictionClaimInput.md) \| [`StatAccreditedClaimInput`](../../interfaces/Types/StatAccreditedClaimInput/StatAccreditedClaimInput.md) \| [`StatAffiliateClaimInput`](../../interfaces/Types/StatAffiliateClaimInput/StatAffiliateClaimInput.md)

#### Defined in

[types/index.ts:336](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L336)

---

### InputStatType

Ƭ **InputStatType**: \{ `type`: [`Count`](../../enums/Types/StatType/StatType.md#count) \| [`Balance`](../../enums/Types/StatType/StatType.md#balance) } \| \{ `claimIssuer`: [`StatClaimIssuer`](../../interfaces/Types/StatClaimIssuer/StatClaimIssuer.md) ; `type`: [`ScopedCount`](../../enums/Types/StatType/StatType.md#scopedcount) \| [`ScopedBalance`](../../enums/Types/StatType/StatType.md#scopedbalance) }

#### Defined in

[types/index.ts:341](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L341)

---

### InputTrustedClaimIssuer

Ƭ **InputTrustedClaimIssuer**: [`Modify`](Utils/Utils.md#modify) \<[`TrustedClaimIssuer`](../../interfaces/Types/TrustedClaimIssuer/TrustedClaimIssuer.md), \{ `identity`: `string` \| [`Identity`](../../classes/API/Entities/Identity/Identity.md) }\>

#### Defined in

[types/index.ts:418](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L418)

---

### InstructionsByStatus

Ƭ **InstructionsByStatus**: [`GroupedInstructions`](../../interfaces/Types/GroupedInstructions/GroupedInstructions.md) & \{ `partiallyAffirmed`: [`Instruction`](../../classes/API/Entities/Instruction/Instruction.md)[] }

#### Defined in

[types/index.ts:1604](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1604)

---

### JoinIdentityAuthorizationData

Ƭ **JoinIdentityAuthorizationData**: `Object`

#### Type declaration

| Name    | Type                                                                                    |
| :------ | :-------------------------------------------------------------------------------------- |
| `type`  | [`JoinIdentity`](../../enums/Types/AuthorizationType/AuthorizationType.md#joinidentity) |
| `value` | [`Permissions`](../../interfaces/Types/Permissions/Permissions.md)                      |

#### Defined in

[types/index.ts:1146](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1146)

---

### MapTxData

Ƭ **MapTxData**\<`ArgsArray`\>: \{ [K in keyof ArgsArray]: ArgsArray[K] extends unknown[] ? TxData\<ArgsArray[K]\> : never }

Apply the [TxData](../../interfaces/Types/TxData/TxData.md) type to all args in an array

#### Type parameters

| Name        | Type                  |
| :---------- | :-------------------- |
| `ArgsArray` | extends `unknown`[][] |

#### Defined in

[types/index.ts:1715](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1715)

---

### MiddlewareScope

Ƭ **MiddlewareScope**: [`Scalars`](Types.md#scalars)[`"JSON"`][``"input"``]

#### Defined in

[middleware/typesV1.ts:9](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/middleware/typesV1.ts#L9)

---

### MortalityProcedureOpt

Ƭ **MortalityProcedureOpt**: [`ImmortalProcedureOptValue`](../../interfaces/Types/ImmortalProcedureOptValue/ImmortalProcedureOptValue.md) \| [`MortalProcedureOptValue`](../../interfaces/Types/MortalProcedureOptValue/MortalProcedureOptValue.md)

#### Defined in

[types/index.ts:1541](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1541)

---

### NextKey

Ƭ **NextKey**: `string` \| `BigNumber` \| `null`

#### Defined in

[types/index.ts:781](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L781)

---

### NonFungiblePortfolioMovement

Ƭ **NonFungiblePortfolioMovement**: `Object`

#### Type declaration

| Name    | Type                                                                                                       | Description                                       |
| :------ | :--------------------------------------------------------------------------------------------------------- | :------------------------------------------------ |
| `asset` | [`NftCollection`](../../classes/API/Entities/Asset/NonFungible/NftCollection/NftCollection.md) \| `string` | -                                                 |
| `memo?` | `string`                                                                                                   | identifier string to help differentiate transfers |
| `nfts`  | ([`Nft`](../../classes/API/Entities/Asset/NonFungible/Nft/Nft.md) \| `BigNumber`)[]                        | -                                                 |

#### Defined in

[types/index.ts:1311](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1311)

---

### PayingAccount

Ƭ **PayingAccount**: \{ `account`: [`Account`](../../classes/API/Entities/Account/Account.md) ; `allowance`: `BigNumber` ; `type`: [`Subsidy`](../../enums/Types/PayingAccountType/PayingAccountType.md#subsidy) } \| \{ `account`: [`Account`](../../classes/API/Entities/Account/Account.md) ; `type`: [`Caller`](../../enums/Types/PayingAccountType/PayingAccountType.md#caller) \| [`Other`](../../enums/Types/PayingAccountType/PayingAccountType.md#other) }

Data representing the Account responsible for paying fees for a transaction

#### Defined in

[types/index.ts:835](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L835)

---

### PermissionsLike

Ƭ **PermissionsLike**: \{ `assets?`: [`SectionPermissions`](../../interfaces/Types/SectionPermissions/SectionPermissions.md)\<`string` \| [`FungibleAsset`](../../classes/API/Entities/Asset/Fungible/FungibleAsset.md)\> \| `null` ; `portfolios?`: [`SectionPermissions`](../../interfaces/Types/SectionPermissions/SectionPermissions.md) \<[`PortfolioLike`](Types.md#portfoliolike)\> \| `null` } & \{ `transactions?`: [`TransactionPermissions`](../../interfaces/Types/TransactionPermissions/TransactionPermissions.md) \| `null` } \| \{ `transactionGroups?`: [`TxGroup`](../../enums/Types/TxGroup/TxGroup.md)[] }

Permissions to grant to a Signer over an Identity

[Permissions](../../interfaces/Types/Permissions/Permissions.md)

**`Note`**

TxGroups in the `transactionGroups` array will be transformed into their corresponding `TxTag`s

#### Defined in

[types/index.ts:1281](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1281)

---

### PortfolioCustodyAuthorizationData

Ƭ **PortfolioCustodyAuthorizationData**: `Object`

#### Type declaration

| Name    | Type                                                                                                                                                                              |
| :------ | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `type`  | [`PortfolioCustody`](../../enums/Types/AuthorizationType/AuthorizationType.md#portfoliocustody)                                                                                   |
| `value` | [`NumberedPortfolio`](../../classes/API/Entities/NumberedPortfolio/NumberedPortfolio.md) \| [`DefaultPortfolio`](../../classes/API/Entities/DefaultPortfolio/DefaultPortfolio.md) |

#### Defined in

[types/index.ts:1151](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1151)

---

### PortfolioLike

Ƭ **PortfolioLike**: `string` \| [`Identity`](../../classes/API/Entities/Identity/Identity.md) \| [`NumberedPortfolio`](../../classes/API/Entities/NumberedPortfolio/NumberedPortfolio.md) \| [`DefaultPortfolio`](../../classes/API/Entities/DefaultPortfolio/DefaultPortfolio.md) \| \{ `id`: `BigNumber` ; `identity`: `string` \| [`Identity`](../../classes/API/Entities/Identity/Identity.md) }

#### Defined in

[types/index.ts:1267](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1267)

---

### PortfolioMovement

Ƭ **PortfolioMovement**: [`FungiblePortfolioMovement`](../../interfaces/Types/FungiblePortfolioMovement/FungiblePortfolioMovement.md) \| [`NonFungiblePortfolioMovement`](Types.md#nonfungibleportfoliomovement)

#### Defined in

[types/index.ts:1320](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1320)

---

### PrivateKey

Ƭ **PrivateKey**: \{ `uri`: `string` } \| \{ `mnemonic`: `string` } \| \{ `seed`: `string` }

URI|mnemonic|hex representation of a private key

#### Defined in

[types/index.ts:1647](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1647)

---

### Role

Ƭ **Role**: [`TickerOwnerRole`](../../interfaces/Types/TickerOwnerRole/TickerOwnerRole.md) \| [`CddProviderRole`](../../interfaces/Types/CddProviderRole/CddProviderRole.md) \| [`VenueOwnerRole`](../../interfaces/Types/VenueOwnerRole/VenueOwnerRole.md) \| [`PortfolioCustodianRole`](../../interfaces/Types/PortfolioCustodianRole/PortfolioCustodianRole.md) \| [`IdentityRole`](../../interfaces/Types/IdentityRole/IdentityRole.md)

#### Defined in

[types/index.ts:137](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L137)

---

### RotatePrimaryKeyAuthorizationData

Ƭ **RotatePrimaryKeyAuthorizationData**: `Object`

#### Type declaration

| Name   | Type                                                                                            |
| :----- | :---------------------------------------------------------------------------------------------- |
| `type` | [`RotatePrimaryKey`](../../enums/Types/AuthorizationType/AuthorizationType.md#rotateprimarykey) |

#### Defined in

[types/index.ts:1137](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1137)

---

### RotatePrimaryKeyToSecondaryData

Ƭ **RotatePrimaryKeyToSecondaryData**: `Object`

#### Type declaration

| Name    | Type                                                                                                                  |
| :------ | :-------------------------------------------------------------------------------------------------------------------- |
| `type`  | [`RotatePrimaryKeyToSecondary`](../../enums/Types/AuthorizationType/AuthorizationType.md#rotateprimarykeytosecondary) |
| `value` | [`Permissions`](../../interfaces/Types/Permissions/Permissions.md)                                                    |

#### Defined in

[types/index.ts:1141](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1141)

---

### Scalars

Ƭ **Scalars**: `Object`

All built-in and custom scalars, mapped to their actual values

#### Type declaration

| Name              | Type                                          |
| :---------------- | :-------------------------------------------- |
| `BigFloat`        | \{ `input`: `any` ; `output`: `any` }         |
| `BigFloat.input`  | `any`                                         |
| `BigFloat.output` | `any`                                         |
| `BigInt`          | \{ `input`: `any` ; `output`: `any` }         |
| `BigInt.input`    | `any`                                         |
| `BigInt.output`   | `any`                                         |
| `Boolean`         | \{ `input`: `boolean` ; `output`: `boolean` } |
| `Boolean.input`   | `boolean`                                     |
| `Boolean.output`  | `boolean`                                     |
| `Cursor`          | \{ `input`: `any` ; `output`: `any` }         |
| `Cursor.input`    | `any`                                         |
| `Cursor.output`   | `any`                                         |
| `Date`            | \{ `input`: `any` ; `output`: `any` }         |
| `Date.input`      | `any`                                         |
| `Date.output`     | `any`                                         |
| `Datetime`        | \{ `input`: `any` ; `output`: `any` }         |
| `Datetime.input`  | `any`                                         |
| `Datetime.output` | `any`                                         |
| `Float`           | \{ `input`: `number` ; `output`: `number` }   |
| `Float.input`     | `number`                                      |
| `Float.output`    | `number`                                      |
| `ID`              | \{ `input`: `string` ; `output`: `string` }   |
| `ID.input`        | `string`                                      |
| `ID.output`       | `string`                                      |
| `Int`             | \{ `input`: `number` ; `output`: `number` }   |
| `Int.input`       | `number`                                      |
| `Int.output`      | `number`                                      |
| `JSON`            | \{ `input`: `any` ; `output`: `any` }         |
| `JSON.input`      | `any`                                         |
| `JSON.output`     | `any`                                         |
| `String`          | \{ `input`: `string` ; `output`: `string` }   |
| `String.input`    | `string`                                      |
| `String.output`   | `string`                                      |

#### Defined in

[middleware/types.ts:13](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/middleware/types.ts#L13)

---

### ScopedClaim

Ƭ **ScopedClaim**: [`JurisdictionClaim`](../../interfaces/Types/JurisdictionClaim/JurisdictionClaim.md) \| [`AccreditedClaim`](../../interfaces/Types/AccreditedClaim/AccreditedClaim.md) \| [`AffiliateClaim`](../../interfaces/Types/AffiliateClaim/AffiliateClaim.md) \| [`BuyLockupClaim`](../../interfaces/Types/BuyLockupClaim/BuyLockupClaim.md) \| [`SellLockupClaim`](../../interfaces/Types/SellLockupClaim/SellLockupClaim.md) \| [`KycClaim`](../../interfaces/Types/KycClaim/KycClaim.md) \| [`ExemptedClaim`](../../interfaces/Types/ExemptedClaim/ExemptedClaim.md) \| [`BlockedClaim`](../../interfaces/Types/BlockedClaim/BlockedClaim.md) \| [`CustomClaim`](../../interfaces/Types/CustomClaim/CustomClaim.md)

#### Defined in

[types/index.ts:295](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L295)

---

### Signer

Ƭ **Signer**: [`Identity`](../../classes/API/Entities/Identity/Identity.md) \| [`Account`](../../classes/API/Entities/Account/Account.md)

#### Defined in

[types/index.ts:1249](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1249)

---

### StatClaimType

Ƭ **StatClaimType**: [`Accredited`](../../enums/Types/ClaimType/ClaimType.md#accredited) \| [`Affiliate`](../../enums/Types/ClaimType/ClaimType.md#affiliate) \| [`Jurisdiction`](../../enums/Types/ClaimType/ClaimType.md#jurisdiction)

#### Defined in

[types/index.ts:319](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L319)

---

### SubCallback

Ƭ **SubCallback**\<`T`\>: (`result`: `T`) => `void` \| `Promise`\<`void`\>

#### Type parameters

| Name |
| :--- |
| `T`  |

#### Type declaration

▸ (`result`): `void` \| `Promise`\<`void`\>

##### Parameters

| Name     | Type |
| :------- | :--- |
| `result` | `T`  |

##### Returns

`void` \| `Promise`\<`void`\>

#### Defined in

[types/index.ts:709](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L709)

---

### TransactionArgument

Ƭ **TransactionArgument**: \{ `_rawType`: `TypeDef` ; `name`: `string` ; `optional`: `boolean` } & [`PlainTransactionArgument`](../../interfaces/Types/PlainTransactionArgument/PlainTransactionArgument.md) \| [`ArrayTransactionArgument`](../../interfaces/Types/ArrayTransactionArgument/ArrayTransactionArgument.md) \| [`SimpleEnumTransactionArgument`](../../interfaces/Types/SimpleEnumTransactionArgument/SimpleEnumTransactionArgument.md) \| [`ComplexTransactionArgument`](../../interfaces/Types/ComplexTransactionArgument/ComplexTransactionArgument.md)

#### Defined in

[types/index.ts:1238](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1238)

---

### TransactionArray

Ƭ **TransactionArray**\<`ReturnValues`\>: \{ [K in keyof ReturnValues]: GenericPolymeshTransaction\<any, ReturnValues[K]\> }

#### Type parameters

| Name           | Type                            |
| :------------- | :------------------------------ |
| `ReturnValues` | extends readonly [...unknown[]] |

#### Defined in

[types/index.ts:1682](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1682)

---

### TransferRestriction

Ƭ **TransferRestriction**: \{ `type`: [`Count`](../../enums/Types/TransferRestrictionType/TransferRestrictionType.md#count) ; `value`: `BigNumber` } \| \{ `type`: [`Percentage`](../../enums/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ; `value`: `BigNumber` } \| \{ `type`: [`ClaimCount`](../../enums/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ; `value`: [`ClaimCountRestrictionValue`](../../interfaces/Types/ClaimCountRestrictionValue/ClaimCountRestrictionValue.md) } \| \{ `type`: [`ClaimPercentage`](../../enums/Types/TransferRestrictionType/TransferRestrictionType.md#claimpercentage) ; `value`: [`ClaimPercentageRestrictionValue`](../../interfaces/Types/ClaimPercentageRestrictionValue/ClaimPercentageRestrictionValue.md) }

#### Defined in

[types/index.ts:1420](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L1420)

---

### UnscopedClaim

Ƭ **UnscopedClaim**: [`CddClaim`](../../interfaces/Types/CddClaim/CddClaim.md)

#### Defined in

[types/index.ts:306](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L306)

---

### UnsubCallback

Ƭ **UnsubCallback**: () => `void`

#### Type declaration

▸ (): `void`

##### Returns

`void`

#### Defined in

[types/index.ts:711](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/types/index.ts#L711)
